[package]
name = "bitcoin"
version = "0.1.0"
authors = ["Adam St Arnaud <ajstarna@ualberta.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.0"
ecdsa = "0.13.3"
elliptic-curve = "0.11.6"
k256 = "0.10.0"
ethnum = "1.0.4"
byteorder = "1.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.5.0"
bincode = "1.3.3"
clap = { version = "3.1.13", features = ["derive"] }
ctrlc = "3.2.2"
serde_json = "1.0.81"
